--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,51 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplicação DEVOPS</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-        }
-        header {
-            background-color: #000000;
-            color: #ffffff;
-            padding: 10px 0;
-            text-align: center;
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #000000;
-            color: #ffffff;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Aplicação DEVOPS</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<header>
-    <h1>Aplicação DEVOPS</h1>
-</header>
+    <body>
+        <header>
+            <h1>Aplicação DEVOPS</h1>
+        </header>
 
-<main>
-    <h2>Bem-vindo à Aplicação DEVOPS!</h2>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente possimus sequi officiis.</p>
-    <p>Espero que goste!</p>
-</main>
+        <main>
+            <h2>Bem-vindo à Aplicação DEVOPS!</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente possimus sequi officiis.</p>
+            <h3>Integrantes:</h3>
+            <p>Clique no link abaixo e veja os integrantes que fizeram parte desta aplicação.</p>
+            <p>
+                <span class="tooltip">
+                    <a class="link" href="http://localhost:3000/integrantes" >Integrantes</a>
+                    <span class="tooltiptext">http://localhost:3000/integrantes</span>
+                </span>
+            </p>
+        </main>
 
-<footer>
-    <p>&copy; 2024 Aplicação DEVOPS. Todos os direitos reservados.</p>
-</footer>
-
-</body>
+        <footer>
+            <p>&copy; 2024 Aplicação DEVOPS. Todos os direitos reservados.</p>
+        </footer>   
+    </body>
 </html>
