atualizando nome integrantes

--- a/src/views/integrantes.html
+++ b/src/views/integrantes.html
@@ -29,10 +29,10 @@
         <script>
             // Dados dos integrantes
             var data = {'integrantes':[
-                {'nome':'Guilherme do Carmo', 'github':'https://github.com/guilhermedcl'},
-                {'nome':'Rayner Kelvin', 'github':'https://github.com/rayner27k'},
-                {'nome':'Róger Bald', 'github':'https://github.com/RogerBald'},
-                {'nome':'Vinicyus Oliveira', 'github':'https://github.com/vinicyusads11'}
+                {'nome':'Guilherme do Carmo Larroide', 'github':'https://github.com/guilhermedcl'},
+                {'nome':'Rayner Kelvin Carvalho Santos', 'github':'https://github.com/rayner27k'},
+                {'nome':'Róger Vinícius de Oliveira Bald', 'github':'https://github.com/RogerBald'},
+                {'nome':'Vinicyus Costa de Andrade', 'github':'https://github.com/vinicyusads11'}
             ]};
 
             // Função para exibir os integrantes na lista
