apresentando trabalho DevOps e suas principais características

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,8 +14,24 @@
 
         <main>
             <h2>Bem-vindo à Aplicação DEVOPS!</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente possimus sequi officiis.</p>
-            <h3>Integrantes:</h3>
+            <p>DevOps é uma cultura e conjunto de práticas que buscam integrar o desenvolvimento de software (Dev) com as operações de sistemas (Ops) de forma colaborativa e automatizada. A ideia central do DevOps é criar um ambiente onde equipes de desenvolvimento e operações possam colaborar de maneira eficiente, permitindo o desenvolvimento, entrega e operação de software de forma mais rápida e confiável.</p>
+
+        <h3>Principais Características do DevOps:</h3>
+        <ol>
+            <li><strong>Colaboração:</strong> DevOps promove a colaboração estreita entre desenvolvedores, operadores de sistemas e outros stakeholders.
+                Isso é alcançado através da quebra de silos organizacionais e da criação de equipes multifuncionais que trabalham juntas em todos os estágios do ciclo de vida do software.</li>
+            <li><strong>Automação:</strong> Automatizar processos é uma pedra angular do DevOps. Isso inclui automação de compilação, teste, implantação, provisionamento de infraestrutura,
+                monitoramento e muito mais. A automação ajuda a reduzir erros, aumentar a velocidade e garantir consistência ao longo do pipeline de entrega de software.</li>
+            <li><strong>Entrega Contínua:</strong> DevOps promove a entrega contínua de software, onde as alterações são entregues rapidamente e de forma incremental.
+                Isso é facilitado pela automação de testes, integração contínua e implantação contínua, permitindo que novas funcionalidades sejam disponibilizadas para os usuários de forma rápida e segura.</li>
+            <li><strong>Infraestrutura como Código:</strong>No DevOps, a infraestrutura é tratada como código, o que significa que a infraestrutura é definida e gerenciada usando os mesmos princípios e práticas
+                de desenvolvimento de software. Isso permite a automação da configuração da infraestrutura e facilita a replicação e escalabilidade do ambiente.</li>
+            <li><strong>Monitoramento e Feedback:</strong> DevOps enfatiza a importância do monitoramento contínuo do desempenho e da utilização do sistema em produção.
+                Isso fornece feedback rápido sobre a qualidade do software e ajuda a identificar e resolver problemas rapidamente.</li>
+            <li><strong>Cultura de Melhoria Contínua:</strong> DevOps promove uma cultura de aprendizado e melhoria contínua, onde equipes buscam constantemente maneiras de otimizar processos, aumentar a eficiência e a qualidade do software.</li>
+        </ol>
+        <p><strong>Em resumo,</strong> DevOps é uma abordagem que visa melhorar a colaboração, automação e entrega de software de alta qualidade de forma rápida e confiável, através da integração de desenvolvimento e operações.</p>
+            <h4>Integrantes:</h4>
             <p>Clique no link abaixo e veja os integrantes que fizeram parte desta aplicação.</p>
             <p>
                 <span class="tooltip">
